...

    <TextView
        android:id="@+id/tvExpression"
        android:layout_width="0dp"
        android:layout_height="0dp"
...
        app:layout_constraintWidth_percent="0.95" />
    <TextView
        android:id="@+id/tvDisplay"
        android:layout_width="0dp"
        android:layout_height="0dp"
...

    <Button
        android:id="@+id/button0"
        style="@style/calcButton"
        android:layout_width="0dp"
...

    <Button
        android:id="@+id/btnDot"
        style="@style/calcButton"
        android:layout_width="0dp"
...
        app:layout_constraintWidth_percent="0.18" />
    <Button
        android:id="@+id/btnPlus"
        style="@style/calcButton"
        android:layout_width="0dp"
...

    <Button
        android:id="@+id/button1"
        style="@style/calcButton"
        android:layout_width="0dp"
...
        app:layout_constraintWidth_percent="0.18" />
    <Button
        android:id="@+id/button2"
        style="@style/calcButton"
        android:layout_width="0dp"
...
        app:layout_constraintWidth_percent="0.18" />
    <Button
        android:id="@+id/button3"
        style="@style/calcButton"
        android:layout_width="0dp"
...
        app:layout_constraintWidth_percent="0.18" />
    <Button
        android:id="@+id/btnMinus"
        style="@style/calcButton"
        android:layout_width="0dp"
...

    <Button
        android:id="@+id/btnEqual"
        style="@style/calcButton"
        android:layout_width="0dp"
...

    <Button
        android:id="@+id/button4"
        style="@style/calcButton"
        android:layout_width="0dp"
...
        app:layout_constraintWidth_percent="0.18" />
    <Button
        android:id="@+id/button5"
        style="@style/calcButton"
        android:layout_width="0dp"
...
        app:layout_constraintWidth_percent="0.18" />
    <Button
        android:id="@+id/btnMulti"
        style="@style/calcButton"
        android:layout_width="0dp"
...

    <Button
        android:id="@+id/button7"
        style="@style/calcButton"
        android:layout_width="0dp"
...
        app:layout_constraintWidth_percent="0.18" />
    <Button
        android:id="@+id/button9"
        style="@style/calcButton"
        android:layout_width="0dp"
...
        app:layout_constraintWidth_percent="0.18" />
    <Button
        android:id="@+id/btnPercent"
        style="@style/calcButton"
        android:layout_width="0dp"
...

    <Button
        android:id="@+id/btnDel"
        style="@style/calcButton"
        android:layout_width="0dp"
...
        app:layout_constraintWidth_percent="0.18" />
    <Button
        android:id="@+id/btnCe"
        style="@style/calcButton"
        android:layout_width="0dp"
...
        app:layout_constraintWidth_percent="0.18" />
    <Button
        android:id="@+id/btnC"
        style="@style/calcButton"
        android:layout_width="0dp"
...
        app:layout_constraintWidth_percent="0.18" />
    <Button
        android:id="@+id/btnChangeSign"
        style="@style/calcButton"
        android:layout_width="0dp"
...
        app:layout_constraintWidth_percent="0.18" />
    <Button
        android:id="@+id/btnSquareRoot"
        style="@style/calcButton"
        android:layout_width="0dp"
...
